// ----------------------------------------------------------------------------
// (C) Copyright IBM Corp. 2020
//
// SPDX-License-Identifier: Apache-2.0
// ----------------------------------------------------------------------------
syntax = "proto3";

package fhirPersistenceScale;

option java_package = "com.ibm.fhir.persistence.scout";
option java_outer_classname = "SearchParameters";

message StrValue {
  string str_value = 1;
  string str_value_lower = 2;
}

message StrValueList {
  repeated StrValue string_values = 1;
}

message DateValue {
  int64 date_start = 1;
  int64 date_end = 2;
}

message DateValueList {
  repeated DateValue date_values = 1;
}

// Java serialization of BigInteger
message BigInt {
  bytes value = 1;
}

// Protobuf does not have native support for BigDecimal, so we
// have to implement our own adaptation
message BigDec {
  BigInt value = 1;
  int32 scale = 2;
}

message NumberValue {
  BigDec number_value = 1;
  BigDec number_value_low = 2;
  BigDec number_value_high = 3;
}

message NumberValueList {
    repeated NumberValue number_values = 1;
}

message TokenValue {
  string code_system = 1;
  string token_value = 2;
}

message TokenValueList {
    repeated TokenValue token_values = 1;
}


message LatLngValue {
  double latitude = 1;
  double longitude = 2;
}

message LatLngValueList {
    repeated LatLngValue latlng_values = 1;
}

message QuantityValue {
  string code = 1;
  string code_system = 2;
  BigDec quantity_value = 3;
  BigDec quantity_value_low = 4;
  BigDec quantity_value_high = 5;
}

message QuantityValueList {
    repeated QuantityValue quantity_values = 1;
}

message ParameterBlock {
    string resource_type = 1;
    string logical_id = 2;
    int32 version_id = 3;
    int64 last_updated = 4;
    
    map<string, StrValueList> string_values = 5;
    map<string, DateValueList> date_values = 6;
    map<string, TokenValueList> token_values = 7;
    map<string, NumberValueList> number_values = 8;
    map<string, LatLngValueList> latlng_values = 9;
    map<string, QuantityValueList> quantity_values = 10;
}
